--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="notes">Заметки</string>
     <string name="school_news">Новости школы</string>
     <string name="school_of_the_map">Школа на карте</string>
+    <string name="sky">Небо:</string>
     //lesson
     <string name="lesson1">1-й урок: с 08:30 до 09:15 </string>
     <string name="lesson2">2-й урок: с 09:25 до 10:10 </string>
